--- a/Proyecto.ipynb
+++ b/Proyecto.ipynb
@@ -21,7 +21,7 @@
         "from tensorflow.keras.optimizers import SGD\n",
         "from sklearn.preprocessing import LabelEncoder\n",
         "from datetime import datetime\n",
-        "#edit"
+        "#edit-edit2"
       ]
     },
     {
@@ -3260,6 +3260,10 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "name": "Proyecto.ipynb",
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3.9 (tensorflow)",
       "language": "python",
@@ -3277,11 +3281,7 @@
       "pygments_lexer": "ipython3",
       "version": "3.9.13"
     },
-    "orig_nbformat": 4,
-    "colab": {
-      "name": "Proyecto.ipynb",
-      "provenance": []
-    }
+    "orig_nbformat": 4
   },
   "nbformat": 4,
   "nbformat_minor": 0
