update: added a edit 3 to test

--- a/Proyecto.ipynb
+++ b/Proyecto.ipynb
@@ -21,7 +21,7 @@
         "from tensorflow.keras.optimizers import SGD\n",
         "from sklearn.preprocessing import LabelEncoder\n",
         "from datetime import datetime\n",
-        "#edit-edit2"
+        "#edit-edit2-edit3"
       ]
     },
     {
