update: added 2 command to save a .csv and .h5 | added a .py to run the .h5

--- a/Proyecto.ipynb
+++ b/Proyecto.ipynb
@@ -3257,6 +3257,15 @@
         "\n",
         "print(ann.predict(vuelo))"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "dataframe.drop('Price').to_csv('dataframe.csv')"
+      ]
     }
   ],
   "metadata": {
