--- a/Proyecto.ipynb
+++ b/Proyecto.ipynb
@@ -3450,9 +3450,9 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3.9 (tensorflow)",
+      "display_name": "Python 3.9.13 ('tensorflow')",
       "language": "python",
-      "name": "tensorflow"
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
@@ -3466,7 +3466,12 @@
       "pygments_lexer": "ipython3",
       "version": "3.9.13"
     },
-    "orig_nbformat": 4
+    "orig_nbformat": 4,
+    "vscode": {
+      "interpreter": {
+        "hash": "4bd624a0593993fe43ac4046b27b898fb2ef75c21c08f81e89e64ea0f51df676"
+      }
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
