feat: add line to predict the vuelo vector

--- a/Proyecto.ipynb
+++ b/Proyecto.ipynb
@@ -32,6 +32,7 @@
         "from sklearn.svm import SVR\n",
         "from matplotlib import pyplot as plt\n",
         "import pickle\n",
+        "#KNN\n",
         "from sklearn.neighbors import KNeighborsClassifier, KNeighborsRegressor\n",
         "from sklearn.metrics import confusion_matrix, accuracy_score\n",
         "from sklearn.linear_model import LogisticRegression\n"
@@ -3379,6 +3380,15 @@
       ],
       "source": [
         "print(knnR.score(X_test,y_test))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print(knnR.predict(vuelo))"
       ]
     },
     {
